--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,43 +1,43 @@
 version: 2
 
 build-distro-bin: &build-distro-bin
+  machine: true
   steps:
     - checkout
+    - echo $CIRCLE_JOB
     # cannot interpolate env var and use as a cache key so just copy the Dockerfile to another filename
-    - run: cp docker/distro_release/Dockerfile.$DISTRO docker/distro_release/Dockerfile
-    # hack since cannot use env var as cache key https://discuss.circleci.com/t/cannot-use-circle-yml-environment-variables-in-cache-keys/10994/4
-    - run: echo $DISTRO > DISTRO
+    - run: cp docker/distro_release/Dockerfile.$CIRCLE_JOB docker/distro_release/Dockerfile
     - restore_cache:
         keys:
-        - v1-{{ checksum "DISTRO" }}-image-{{ checksum "docker/distro_release/Dockerfile" }}
+        - v1-{{ .Environment.CIRCLE_JOB }}-image-{{ checksum "docker/distro_release/Dockerfile" }}
     - run:
         name: load or build docker image
         command: |
-          if [[ -e ~/image.tar ]]; then
-            docker load -i ~/image.tar
+          if [[ -e ~/$CIRCLE_JOB.tar ]]; then
+            docker load -i ~/$CIRCLE_JOB.tar
           else
-            docker build --rm=false -t $DISTRO -f docker/distro_release/Dockerfile.$DISTRO docker/distro_release/
-            docker save $DISTRO > ~/image.tar
+            docker build --rm=false -t $CIRCLE_JOB -f docker/distro_release/Dockerfile.$CIRCLE_JOB docker/distro_release/
+            docker save $CIRCLE_JOB > ~/$CIRCLE_JOB.tar
           fi
     - save_cache:
         paths:
-          - ~/image.tar
-        key: v1-{{ checksum "DISTRO" }}-image-{{ checksum "docker/distro_release/Dockerfile" }}
+          - ~/{{ .Environment.CIRCLE_JOB }}.tar
+        key: v1-{{ .Environment.CIRCLE_JOB }}-image-{{ checksum "docker/distro_release/Dockerfile" }}
     - restore_cache:
         keys:
-        - v4-{{ checksum "DISTRO" }}-dependencies-{{ checksum "postgrest.cabal" }}-{{ checksum "stack.yaml" }}
+        - v4-{{ .Environment.CIRCLE_JOB }}-dependencies-{{ checksum "postgrest.cabal" }}-{{ checksum "stack.yaml" }}
     - run:
         name: build dependencies
         command: |
           docker run -it \
             -v $HOME/.stack:/root/.stack \
             -v $(pwd):/source \
-            $DISTRO build --allow-different-user --only-snapshot --install-ghc
+            $CIRCLE_JOB build --allow-different-user --only-snapshot --install-ghc
           sudo chown -R circleci:circleci ~/.stack
     - save_cache:
         paths:
           - "~/.stack"
-        key: v4-{{ checksum "DISTRO" }}-dependencies-{{ checksum "postgrest.cabal" }}-{{ checksum "stack.yaml" }}
+        key: v4-{{ .Environment.CIRCLE_JOB }}-dependencies-{{ checksum "postgrest.cabal" }}-{{ checksum "stack.yaml" }}
     - run:
         name: build binary
         command: |
@@ -45,10 +45,15 @@ build-distro-bin: &build-distro-bin
             -v $HOME/.stack:/root/.stack \
             -v $(pwd):/source \
             -v /tmp/:/root/.local/bin/ \
-            $DISTRO build --allow-different-user --copy-bins
+            $CIRCLE_JOB build --allow-different-user --copy-bins
     - run:
         name: compress binary
-        command: cd /tmp && tar cjf postgrest-$DISTRO.tar.xz postgrest
+        command: cd /tmp && tar cjf postgrest-$CIRCLE_JOB.tar.xz postgrest
+    - persist_to_workspace:
+      root: /tmp
+      paths:
+        - postgrest-{{ .Environment.CIRCLE_JOB }}.tar.xz
+
 
 jobs:
   build-test:
@@ -98,27 +103,11 @@ jobs:
             - ".stack-work"
           key: v1-stack-dependencies-{{ checksum "postgrest.cabal" }}-{{ checksum "stack.yaml" }}
 
-  build-centos6-bin:
-    machine:
-      enabled: true
-    environment:
-      - DISTRO: centos6
+  centos6:
     <<: *build-distro-bin
-    - persist_to_workspace:
-        root: /tmp
-        paths:
-          - postgrest-centos6.tar.xz
 
-  build-centos7-bin:
-    machine:
-      enabled: true
-    environment:
-      - DISTRO: centos7
+  centos7:
     <<: *build-distro-bin
-    - persist_to_workspace:
-        root: /tmp
-        paths:
-          - postgrest-centos7.tar.xz
 
   release:
     docker:
