Correct compression alg

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -14,7 +14,7 @@ RUN BUILD_DEPS="curl ca-certificates xz-utils" && \
     apt-get -qq install -y --no-install-recommends $BUILD_DEPS && \
     cd /tmp && \
     curl -SLO https://github.com/steve-chavez/postgrest/releases/download/v${POSTGREST_VERSION}/postgrest-v${POSTGREST_VERSION}-ubuntu.tar.xz && \
-    tar -xJvf postgrest-v${POSTGREST_VERSION}-ubuntu.tar.xz && \
+    tar -xjvf postgrest-v${POSTGREST_VERSION}-ubuntu.tar.xz && \
     mv postgrest /usr/local/bin/postgrest && \
     cd / && \
     apt-get -qq purge --auto-remove -y $BUILD_DEPS && \
