--- a/stack.yaml
+++ b/stack.yaml
@@ -1,4 +1,9 @@
 resolver: lts-9.6
+
+packages:
+- .
+- ../hasql
+
 extra-deps:
   - configurator-ng-0.0.0.1
   - critbit-0.2.0.0
@@ -6,6 +11,7 @@ extra-deps:
   - hjsonschema-1.5.0.1
   - Ranged-sets-0.3.0
   - protolude-0.2
+  - bug-1.0.1
 ghc-options:
   postgrest: -O2 -Wall -fwarn-identities -fno-warn-redundant-constraints
 nix:
