--- a/postgrest.cabal
+++ b/postgrest.cabal
@@ -59,8 +59,8 @@ library
                      , contravariant
                      , either
                      , hasql
-                     , hasql-pool == 0.4.1
-                     , hasql-transaction == 0.5
+                     , hasql-pool
+                     , hasql-transaction
                      , heredoc
                      , HTTP
                      , http-types
