Add UPSERT for POST with Prefer:resoultion=merge/ignore-duplicates

--- a/postgrest.cabal
+++ b/postgrest.cabal
@@ -131,6 +131,7 @@ Test-Suite spec
                      , Feature.AndOrParamsSpec
                      , Feature.RpcSpec
                      , Feature.NonexistentSchemaSpec
+                     , Feature.UpsertSpec
                      , SpecHelper
                      , TestTypes
   Build-Depends:       aeson
