--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -7,6 +7,7 @@ build_task:
     - whereis gmake
     - whereis gcc
   install_script:
+    - pkg install -y coreutils
     - pkg install -y gmake
     - pkg install -y libiconv
     - pkg install -y gmp
