--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -37,4 +37,4 @@ publish_task:
     - build
   script:
     - tar cjf $NAME postgrest
-    - curl -X POST --data-binary $NAME --header "Authorization: token $TOKEN" --header "Content-Type: application/octet-stream" "https://uploads.github.com/repos/steve-chavez/postgrest/releases/11100502/assets?name=${NAME}"
+    - curl -X POST --data-binary $NAME --header "Authorization: token ${TOKEN}" --header "Content-Type: application/octet-stream" "https://uploads.github.com/repos/steve-chavez/postgrest/releases/11100502/assets?name=${NAME}"
