--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -433,7 +433,7 @@ jobs:
           command: |
             mkdir -p /tmp/workspace/bin
             cd /tmp/workspace/bin
-            tar cvJf postgrest-$CIRCLE_TAG-linux-x64-static.tar.xz -C ~/postgrest/result/bin postgrest
+            tar cvJf postgrest-$CIRCLE_TAG-linux-x64-static.tar.xz -C ~/project/result/bin postgrest
       - persist_to_workspace:
           root: /tmp/workspace
           paths:
