--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -23,7 +23,7 @@ build_task:
     - cabal v2-update
     - cabal v2-build
   binaries_artifacts:
-    path: /tmp/cirrus-ci-build/dist-newstyle/build/x86_64-freebsd/ghc-8.6.5/postgrest-7.0.1/x/postgrest/build/postgrest/postgrest
+    path: "dist-newstyle/build/x86_64-freebsd/ghc-8.6.5/postgrest-7.0.1/x/postgrest/build/postgrest/*"
   #binary_script:
     #- mkdir bin
     ## cabal v2-install --installdir=.
