--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -242,6 +242,8 @@ workflows:
             - nix-build-test
           filters:
             tags:
-              only: /v[0-9]+(\.[0-9]+)*/
+              only:
+                - /v[0-9]+(\.[0-9]+)*/
+                - nightly
             branches:
               ignore: /.*/
