--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -238,6 +238,7 @@ workflows:
                 - nightly
       - nix-build-test:
           filters:
+            tags:
               only:
                 - /v[0-9]+(\.[0-9]+)*/
                 - nightly
