--- a/.travis.yml
+++ b/.travis.yml
@@ -57,12 +57,22 @@ jobs:
           else
             OWNER="$(echo "$TRAVIS_REPO_SLUG" | cut -f1 -d/)"
             REPO="$(echo "$TRAVIS_REPO_SLUG" | cut -f2 -d/)"
-            START=$(echo $TRAVIS_TAG | cut -c2-)
-            END='## \['
-            BODY=$(sed -n "1,/$START/d;/$END/q;p" CHANGELOG.md)
-            strip postgrest
-            tar cJf postgrest-$TRAVIS_TAG-osx.tar.xz postgrest
-            ghr -t $GITHUB_TOKEN -u $OWNER -r $REPO -b "$BODY"--replace $TRAVIS_TAG postgrest-$TRAVIS_TAG-osx.tar.xz
+            if test $TRAVIS_TAG = "nightly"
+            then
+              DATE=$(date +'%F')
+              SHA=$(echo $TRAVIS_COMMIT | head -c7)
+              SUFFIX=$DATE-$SHA
+              strip postgrest
+              tar cJf postgrest-nightly-$SUFFIX-osx.tar.xz postgrest
+              ghr -t $GITHUB_TOKEN -u $OWNER -r $REPO --replace nightly postgrest-nightly-$SUFFIX-osx.tar.xz
+            else
+              START=$TRAVIS_TAG
+              END='## \['
+              BODY=$(sed -n "1,/$START/d;/$END/q;p" CHANGELOG.md)
+              strip postgrest
+              tar cJf postgrest-$TRAVIS_TAG-osx.tar.xz postgrest
+              ghr -t $GITHUB_TOKEN -u $OWNER -r $REPO -b "$BODY"--replace $TRAVIS_TAG postgrest-$TRAVIS_TAG-osx.tar.xz
+            fi
           fi
 
     - name: Code Coverage
