--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -10,7 +10,7 @@ build_task:
     folder: /var/cache/pkg
 
   install_script:
-    - pkg install -y postgresql95-client ghc hs-cabal-install
+    - pkg install -y postgresql95-client ghc hs-cabal-install jq
 
   # cache the hackage index file and downloads which are
   # cabal v2-update downloads an incremental update, so we don't need to keep this up2date
